--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+# set target && use zig to compile set(ZIG_TARGET "x86_64-linux-gnu")
+# include(${CMAKE_CURRENT_LIST_DIR}/cmake/zig-toolchain.cmake)
+
 # CMake minimum version required
 cmake_minimum_required(VERSION 3.15)
 
@@ -11,7 +14,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # export comamnd
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-
 # Find OpenCV package
 find_package(OpenCV REQUIRED)
 
@@ -19,7 +21,6 @@ find_package(OpenCV REQUIRED)
 set(SOURCE_FILES src/main.cpp
                  # Add other source files here
 )
-
 
 # Add an executable target
 add_executable(OpenCVApp ${SOURCE_FILES})
